syntax = "proto3";

package kiosk;
option go_package = "g/rpc/kiosk";

import "models.proto";
import "google/protobuf/empty.proto";

service CommentService {
    rpc create(Comment) returns (google.protobuf.Empty) {}
    rpc update(Comment) returns (google.protobuf.Empty) {}
    rpc delete(Id) returns (google.protobuf.Empty) {}
}
