syntax = "proto3";

option go_package = "g/rpc/kiosk";

import "models.proto";
import "google/protobuf/empty.proto";

service TicketService {
    rpc create(Ticket) returns (google.protobuf.Empty) {}
    rpc read(Id) returns (Ticket) {}
    rpc update(Ticket) returns (google.protobuf.Empty) {}
    rpc delete(Id) returns (google.protobuf.Empty) {}
    rpc list(ListTicketsRequest) returns (ListTicketsResponse) {}
}

message ListTicketsRequest {
    string owner = 1;
    Page page = 2;
}

message ListTicketsResponse {
    repeated Ticket tickets = 1;
}
